--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,6 +1,8 @@
 <br/>
-<div class="text-c font-x3 bold">Glad to see<br/>you back!</div>
-<div class="default-block margin-c font-x2"
+<div *ngIf="dataChecked"
+     class="text-c font-x3 bold">Glad to see<br/> you back!</div>
+<div *ngIf="dataChecked"
+     class="default-block margin-c font-x2"
      style="padding: 20px;
 	    width: 50%;">
     <div class="text-c">Login</div>
