--- a/src/app/post-editor/post-editor.component.scss
+++ b/src/app/post-editor/post-editor.component.scss
@@ -1,40 +1,102 @@
 #edit-area {
-    caret-color: black;
-    background-color: transparent;
-    &:focus {
-	outline-color: transparent;
-    }
-    
-    * {
-	background-color: transparent;
-	caret-color: black;
-	padding: 0;
-	margin: 0;
-	border: none;
-    }
-    
-    // * {
-    // 	border: none;
-    // 	padding: 0;
-    // 	margin: 0;
-    // }
+    padding: 5px;
+    margin: 5px;
 }
 
-#line-through-button {
-    &:after {
-	position: absolute;
-	text-decoration: line-through;
-	content: "\00a0\00a0";
-	left: 30%;
+.tool-bar-button {
+    margin: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 5px;
+    color: inherit;
+    box-shadow: -1px 1px 3px grey;
+    border: 2px solid transparent;
+    cursor: default;
+    &:active {
+	border: 2px solid;
+	box-shadow: none;
     }
+
 }
 
-#bold-button {
-    text-shadow: 0 0 2px;
+.pressed {
+    border: 2px solid grey;
+    box-shadow: none;
 }
 
-#save-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+.icon {
+    background-repeat: no-repeat;
+    width: 32px;
+    content: "";
 }
+
+.img-icon {
+    background-repeat: no-repeat;
+    background-image: url("../../assets/icon_img.svg");
+    width: 32px;
+    content: "";
+}
+
+.ol-icon {
+    background-repeat: no-repeat;
+    background-image: url("../../assets/icon_ordered_list.svg");
+    width: 32px;
+    content: "";
+}
+
+.ul-icon {
+    background-repeat: no-repeat;
+    background-image: url("../../assets/icon_unordered_list.svg");
+    width: 32px;
+    content: "";
+}
+
+.justify-right-icon {
+    background-repeat: no-repeat;
+    background-image: url("../../assets/icon_justify_right.svg");
+    width: 32px;
+    content: "";
+}
+
+.justify-left-icon {
+    background-repeat: no-repeat;
+    background-image: url("../../assets/icon_justify_left.svg");
+    width: 32px;
+    content: "";
+}
+
+.justify-center-icon {
+    background-repeat: no-repeat;
+    background-image: url("../../assets/icon_justify_center.svg");
+    width: 32px;
+    content: "";
+}
+
+.outdent-icon {
+    background-repeat: no-repeat;
+    background-image: url("../../assets/icon_outdent.svg");
+    width: 32px;
+    content: "";
+}
+
+.indent-icon {
+    background-repeat: no-repeat;
+    background-image: url("../../assets/icon_indent.svg");
+    width: 32px;
+    content: "";
+}
+
+
+// .justify-right-icon {
+//     background-repeat: no-repeat;
+//     background-image: url("../../assets/icon_unordered_list.svg");
+//     width: 32px;
+//     content: "";
+// }
+
+// .justify-right-icon {
+//     background-repeat: no-repeat;
+//     background-image: url("../assets");
+//     width: 32px;
+//     content: "";
+// }
