--- a/src/app/sign-in/sign-in.component.scss
+++ b/src/app/sign-in/sign-in.component.scss
@@ -1,3 +1,8 @@
+* {
+    padding: 5px;
+    margin: 5px;
+}
+
 #sub {
     margin-right: auto;
     border-color: #74d146;
@@ -27,11 +32,16 @@ input {
     border-bottom: 1px solid;
     border-bottom-color: inherit;
     transition: 0.2s;
+    width: 80%;
     &:focus {
 	decoration: none;
 	outline: none;
 	box-shadow: 0 -3px 0 -2px inset;
     }
+}
+
+table {
+    width: 110%;
 }
 
 .mock-button {
