--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,12 +9,11 @@ app-root {
     
     * {
 	font-family: 'Inconsolata', monospace;
-	background-color: white;
+	// background-color: white;
+	
 	border-color: grey;
 	border-radius: 5px;
-	padding: 5px;
 	text-align: justify;
-	margin: 5px;
 	transition: 0.2s;
 	position: relative;
 	color: #5f5f5f;
@@ -106,25 +105,59 @@ app-root {
 	flex-direction: column-reverse;
     }
     
-    .mock-button, .header-button {
-	border: 2px solid;
-	width: fit-content;
-	user-select: none;
-	font-weight: bold;
-	color: inherit;
-	&:hover {
-	    color: inherit;
-	    box-shadow: -1px 1px 5px grey;
-	    border-color: transparent;
-	}
+    .img-filter {
+	filter: invert(30%);
     }
 
+    
     .mock-button {
+    	border: 2px solid;
+    	width: fit-content;
+    	user-select: none;
+    	font-weight: bold;
+    	color: inherit;
+	padding-left: 15px;
+	padding-right: 15px;
+    	&:hover {
+    	    color: inherit;
+    	    box-shadow: -1px 1px 5px grey;
+    	    border-color: transparent;
+    	}
 	&:active {
 	    box-shadow: 0px 0px 3px grey;
 	}
-	padding-left: 15px;
-	padding-right: 15px;
+    }
+
+    .header-button {
+	margin: 5px;
+	margin-bottom: 0;
+	padding: 5px;
+	padding-top: 0px;
+	// padding-bottom: 10px;
+	cursor: default;
+	border-radius: 0;
+	font-weight: bold;
+	&:hover {
+	    box-shadow: inset 0 -3px;
+	}
+    }
+    
+    
+    // .mock-button {
+    // &:active {
+    // box-shadow: 0px 0px 3px grey;
+    // }
+    // padding-left: 15px;
+    // padding-right: 15px;
+    // }
+    
+    .mock-link {
+	user-select: none;
+	&:hover {
+	    box-shadow: 0 -6px 0 -3px inset;
+	    border-radius: 0;
+	    cursor: pointer;
+	}
     }
     
     .button-activate {
@@ -132,12 +165,6 @@ app-root {
 	border-color: transparent;
     }
 
-    .header-button {
-	padding: 5px;
-	padding-top: 0px;
-	padding-bottom: 2px;
-	border: none;
-    }
     
     .default-block {
 	box-shadow: -2px 2px 6px 0 grey;
@@ -169,9 +196,14 @@ app-root {
 	text-decoration: underline;
     }
     
-    .crossed {
+    .strike {
 	text-decoration: line-through;
     }
+    
+    .break {
+	// white-space: pre-line;
+    }
+    
     
     input {
 	decoration: none;
@@ -198,21 +230,44 @@ app-root {
     }
     
     .sandwich {
-	height: 30px;
-	width: 30px;
+	// height: 30px;
+	// width: 30px;
 	content: "";
 	height: 0px;
 	width: 30px;
 	border: 3px solid;
 	box-shadow: 0 10px, 0 20px;
 	padding: 0;
+	margin-top: 6px;
+	margin-bottom: 27px;
     }
     
     ::placeholder {
 	opacity: 0.5;
     }
+    
+    .header {
+	padding: 0;
+	border: none;
+	border-radius: 0;
+	margin: 0px;
+	background-color: #f7f7f7;
+    }
+    
+    .default-card {
+	padding: 5px;
+	margin: 5px;
+	box-shadow: -2px 2px 6px 0;
+	overflow: hidden;
+	border: none;
+    }
 }
 
+// router-outlet {
+// border: none;
+// margin: 0;
+// padding: 0;
+// }
 
 app-root > * {
     position: absolute;
